[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ycombinator-scraper"
description = "A Python command-line tool and package for scraping company, job, and founder data from Workatastartup.com"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Ifeanyi Nneji", email = "ifeanyinneji777@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Framework :: Pydantic",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1.7",
    "beautifulsoup4 >= 4.12.3",
    "loguru >= 0.7.2",
    "pandas >= 2.2.0",
    "pathlib >=1.0.1",
    "pydantic >= 2.5.3",
    "pydantic-settings >= 2.1.0",
    "selenium >=4.17.2",
    "webdriver-manager >=4.0.1",
]
# dynamic = ["version"]
version = "0.7.4"


[project.urls]
Homepage = "https://github.com/Nneji123/ycombinator-scraper"
Documentation = "https://Nneji23.github.io/ycombinator-scraper"
Repository = "https://github.com/Nneji123/ycombinator-scraper"
"Say Thanks!" = "https://saythanks.io/to/Nneji123"
"Source" = "https://github.com/Nneji123/ycombinator-scraper"


[project.scripts]
ycscraper="ycombinator_scraper.cli:cli"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"

[tool.setuptools]
packages = ["ycombinator_scraper"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_files = [
    "ycombinator_scraper/__init__.py"
]
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
